start: Moving to AVD eos_designs approach

--- a/config-builder/documentation/devices/s1-ce01.md
+++ b/config-builder/documentation/devices/s1-ce01.md
@@ -11,7 +11,7 @@
 - [Authentication](#authentication)
   - [Local Users](#local-users)
   - [AAA Authorization](#aaa-authorization)
-- [Aliases](#aliases)
+- [Aliases Device Configuration](#aliases-device-configuration)
 - [VLANs](#vlans)
   - [VLANs Summary](#vlans-summary)
   - [VLANs Device Configuration](#vlans-device-configuration)
@@ -36,13 +36,13 @@
 
 ##### IPv4
 
-| Management Interface | description | Type | VRF | IP Address | Gateway |
+| Management Interface | Description | Type | VRF | IP Address | Gateway |
 | -------------------- | ----------- | ---- | --- | ---------- | ------- |
 | Management0 | oob_management | oob | default | 192.168.2.211/24 | 192.168.2.1 |
 
 ##### IPv6
 
-| Management Interface | description | Type | VRF | IPv6 Address | IPv6 Gateway |
+| Management Interface | Description | Type | VRF | IPv6 Address | IPv6 Gateway |
 | -------------------- | ----------- | ---- | --- | ------------ | ------------ |
 | Management0 | oob_management | oob | default | - | - |
 
@@ -58,7 +58,7 @@ interface Management0
 
 ### DNS Domain
 
-#### DNS domain: atd.lab
+DNS domain: atd.lab
 
 #### DNS Domain Device Configuration
 
@@ -95,8 +95,7 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 
 ### Management SSH
 
-
-#### SSH timeout and management
+#### SSH Timeout and Management
 
 | Idle Timeout | SSH Management |
 | ------------ | -------------- |
@@ -108,7 +107,7 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 | ---------------- | ---------------------- |
 | - | - |
 
-#### Ciphers and algorithms
+#### Ciphers and Algorithms
 
 | Ciphers | Key-exchange methods | MAC algorithms | Hostkey server algorithms |
 |---------|----------------------|----------------|---------------------------|
@@ -120,7 +119,7 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 | --- | ------ |
 | default | Enabled |
 
-#### Management SSH Configuration
+#### Management SSH Device Configuration
 
 ```eos
 !
@@ -145,7 +144,7 @@ management ssh
 | -------- | -------- | -------- |
 | default | - | - |
 
-#### Management API HTTP Configuration
+#### Management API HTTP Device Configuration
 
 ```eos
 !
@@ -197,7 +196,7 @@ aaa authorization exec default local
 !
 ```
 
-## Aliases
+## Aliases Device Configuration
 
 ```eos
 alias ale show ip hardware ale routes unprogrammed
@@ -217,7 +216,7 @@ alias sli show lacp interface Ethernet %1 detailed
 alias sqnz show interface counter queue | nz
 alias srnz show interface counter rate | nz
 alias summary show bgp summary
-alias summary6 show ipv6 bgp summary
+
 !
 ```
 
@@ -251,8 +250,6 @@ vlan 2001
 
 | Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
 | --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
-| Ethernet1 | - | *trunk | *1810, 2001 | *- | *- | 1 |
-| Ethernet2 | - | *trunk | *1810, 2001 | *- | *- | 1 |
 
 *Inherited from Port-Channel Interface
 
@@ -261,11 +258,9 @@ vlan 2001
 ```eos
 !
 interface Ethernet1
-   switchport
    channel-group 1 mode active
 !
 interface Ethernet2
-   switchport
    channel-group 1 mode active
 ```
 
@@ -275,9 +270,8 @@ interface Ethernet2
 
 ##### L2
 
-| Interface | Description | Type | Mode | VLANs | Native VLAN | Trunk Group | LACP Fallback Timeout | LACP Fallback Mode | MLAG ID | EVPN ESI |
-| --------- | ----------- | ---- | ---- | ----- | ----------- | ------------| --------------------- | ------------------ | ------- | -------- |
-| Port-Channel1 | to s1-pe01 - firewall test - vrrp | switched | trunk | 1810, 2001 | - | - | - | - | - | - |
+| Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | LACP Fallback Timeout | LACP Fallback Mode | MLAG ID | EVPN ESI |
+| --------- | ----------- | ---- | ----- | ----------- | ------------| --------------------- | ------------------ | ------- | -------- |
 
 #### Port-Channel Interfaces Device Configuration
 
@@ -285,7 +279,6 @@ interface Ethernet2
 !
 interface Port-Channel1
    description to s1-pe01 - firewall test - vrrp
-   switchport
    switchport trunk allowed vlan 1810, 2001
    switchport mode trunk
 ```
@@ -301,10 +294,10 @@ interface Port-Channel1
 
 ##### IPv4
 
-| Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | VRRP | ACL In | ACL Out |
-| --------- | --- | ---------- | ------------------ | ------------------------- | ---- | ------ | ------- |
-| Vlan1810 |  FW-HA  |  10.18.10.211/24  |  -  |  -  |  -  |  -  |  -  |
-| Vlan2001 |  BKP  |  10.200.1.211/24  |  -  |  -  |  -  |  -  |  -  |
+| Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
+| --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
+| Vlan1810 |  FW-HA  |  10.18.10.{{ device_id }}/24  |  -  |  -  |  -  |  -  |
+| Vlan2001 |  BKP  |  10.200.1.{{ device_id }}/24  |  -  |  -  |  -  |  -  |
 
 ##### VRRP Details
 
@@ -320,7 +313,7 @@ interface Vlan1810
    description vrf-FW-HA-xco-firewall-site01
    no shutdown
    vrf FW-HA
-   ip address 10.18.10.211/24
+   ip address 10.18.10.{{ device_id }}/24
    vrrp 10 priority-level 100
    vrrp 10 ipv4 10.18.10.254
    vrrp 10 ipv4 version 3
@@ -329,7 +322,7 @@ interface Vlan2001
    description vrf-bkp-xco-site01
    no shutdown
    vrf BKP
-   ip address 10.200.1.211/24
+   ip address 10.200.1.{{ device_id }}/24
 ```
 
 ## Routing
@@ -376,8 +369,8 @@ ip routing vrf FW-HA
 
 #### Static Routes Summary
 
-| VRF | Destination Prefix | Next Hop IP             | Exit interface      | Administrative Distance       | Tag               | Route Name                    | Metric         |
-| --- | ------------------ | ----------------------- | ------------------- | ----------------------------- | ----------------- | ----------------------------- | -------------- |
+| VRF | Destination Prefix | Next Hop IP | Exit interface | Administrative Distance | Tag | Route Name | Metric |
+| --- | ------------------ | ----------- | -------------- | ----------------------- | --- | ---------- | ------ |
 | FW-HA | 0.0.0.0/0 | 10.18.10.1 | - | 1 | - | - | - |
 | BKP | 0.0.0.0/0 | 10.200.1.1 | - | 1 | - | - | - |
 | default | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
@@ -386,9 +379,9 @@ ip routing vrf FW-HA
 
 ```eos
 !
-ip route vrf FW-HA 0.0.0.0/0 10.18.10.1
-ip route vrf BKP 0.0.0.0/0 10.200.1.1
 ip route 0.0.0.0/0 192.168.2.1
+ip route vrf BKP 0.0.0.0/0 10.200.1.1
+ip route vrf FW-HA 0.0.0.0/0 10.18.10.1
 ```
 
 ## VRF Instances
