--- a/config-builder/documentation/devices/s1-ce02.md
+++ b/config-builder/documentation/devices/s1-ce02.md
@@ -11,14 +11,7 @@
 - [Authentication](#authentication)
   - [Local Users](#local-users)
   - [AAA Authorization](#aaa-authorization)
-- [Aliases](#aliases)
-- [VLANs](#vlans)
-  - [VLANs Summary](#vlans-summary)
-  - [VLANs Device Configuration](#vlans-device-configuration)
-- [Interfaces](#interfaces)
-  - [Ethernet Interfaces](#ethernet-interfaces)
-  - [Port-Channel Interfaces](#port-channel-interfaces)
-  - [VLAN Interfaces](#vlan-interfaces)
+- [Aliases Device Configuration](#aliases-device-configuration)
 - [Routing](#routing)
   - [Service Routing Protocols Model](#service-routing-protocols-model)
   - [IP Routing](#ip-routing)
@@ -36,13 +29,13 @@
 
 ##### IPv4
 
-| Management Interface | description | Type | VRF | IP Address | Gateway |
+| Management Interface | Description | Type | VRF | IP Address | Gateway |
 | -------------------- | ----------- | ---- | --- | ---------- | ------- |
 | Management0 | oob_management | oob | default | 192.168.2.212/24 | 192.168.2.1 |
 
 ##### IPv6
 
-| Management Interface | description | Type | VRF | IPv6 Address | IPv6 Gateway |
+| Management Interface | Description | Type | VRF | IPv6 Address | IPv6 Gateway |
 | -------------------- | ----------- | ---- | --- | ------------ | ------------ |
 | Management0 | oob_management | oob | default | - | - |
 
@@ -58,7 +51,7 @@ interface Management0
 
 ### DNS Domain
 
-#### DNS domain: atd.lab
+DNS domain: atd.lab
 
 #### DNS Domain Device Configuration
 
@@ -95,8 +88,7 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 
 ### Management SSH
 
-
-#### SSH timeout and management
+#### SSH Timeout and Management
 
 | Idle Timeout | SSH Management |
 | ------------ | -------------- |
@@ -108,7 +100,7 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 | ---------------- | ---------------------- |
 | - | - |
 
-#### Ciphers and algorithms
+#### Ciphers and Algorithms
 
 | Ciphers | Key-exchange methods | MAC algorithms | Hostkey server algorithms |
 |---------|----------------------|----------------|---------------------------|
@@ -120,7 +112,7 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 | --- | ------ |
 | default | Enabled |
 
-#### Management SSH Configuration
+#### Management SSH Device Configuration
 
 ```eos
 !
@@ -145,7 +137,7 @@ management ssh
 | -------- | -------- | -------- |
 | default | - | - |
 
-#### Management API HTTP Configuration
+#### Management API HTTP Device Configuration
 
 ```eos
 !
@@ -197,7 +189,7 @@ aaa authorization exec default local
 !
 ```
 
-## Aliases
+## Aliases Device Configuration
 
 ```eos
 alias ale show ip hardware ale routes unprogrammed
@@ -217,107 +209,8 @@ alias sli show lacp interface Ethernet %1 detailed
 alias sqnz show interface counter queue | nz
 alias srnz show interface counter rate | nz
 alias summary show bgp summary
-alias summary6 show ipv6 bgp summary
+
 !
-```
-
-## VLANs
-
-### VLANs Summary
-
-| VLAN ID | Name | Trunk Groups |
-| ------- | ---- | ------------ |
-| 1810 | S1-FW-XCO | - |
-
-### VLANs Device Configuration
-
-```eos
-!
-vlan 1810
-   name S1-FW-XCO
-```
-
-## Interfaces
-
-### Ethernet Interfaces
-
-#### Ethernet Interfaces Summary
-
-##### L2
-
-| Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
-| --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
-| Ethernet1 | - | *trunk | *1810, 2001 | *- | *- | 1 |
-| Ethernet2 | - | *trunk | *1810, 2001 | *- | *- | 1 |
-
-*Inherited from Port-Channel Interface
-
-#### Ethernet Interfaces Device Configuration
-
-```eos
-!
-interface Ethernet1
-   switchport
-   channel-group 1 mode active
-!
-interface Ethernet2
-   switchport
-   channel-group 1 mode active
-```
-
-### Port-Channel Interfaces
-
-#### Port-Channel Interfaces Summary
-
-##### L2
-
-| Interface | Description | Type | Mode | VLANs | Native VLAN | Trunk Group | LACP Fallback Timeout | LACP Fallback Mode | MLAG ID | EVPN ESI |
-| --------- | ----------- | ---- | ---- | ----- | ----------- | ------------| --------------------- | ------------------ | ------- | -------- |
-| Port-Channel1 | to s1-pe01 - firewall test - vrrp | switched | trunk | 1810, 2001 | - | - | - | - | - | - |
-
-#### Port-Channel Interfaces Device Configuration
-
-```eos
-!
-interface Port-Channel1
-   description to s1-pe01 - firewall test - vrrp
-   switchport
-   switchport trunk allowed vlan 1810, 2001
-   switchport mode trunk
-```
-
-### VLAN Interfaces
-
-#### VLAN Interfaces Summary
-
-| Interface | Description | VRF |  MTU | Shutdown |
-| --------- | ----------- | --- | ---- | -------- |
-| Vlan1810 | vrf-FW-HA-xco-firewall-site01 | FW-HA | - | False |
-
-##### IPv4
-
-| Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | VRRP | ACL In | ACL Out |
-| --------- | --- | ---------- | ------------------ | ------------------------- | ---- | ------ | ------- |
-| Vlan1810 |  FW-HA  |  10.18.10.212/24  |  -  |  -  |  -  |  -  |  -  |
-
-##### VRRP Details
-
-| Interface | VRRP-ID | Priority | Advertisement Interval | Preempt | Tracked Object Name(s) | Tracked Object Action(s) | IPv4 Virtual IP | IPv4 VRRP Version | IPv6 Virtual IP |
-| --------- | ------- | -------- | ---------------------- | --------| ---------------------- | ------------------------ | --------------- | ----------------- | --------------- |
-| Vlan1810 | 10 | 200 | - | Enabled | - | - | 10.18.10.254 | 3 | - |
-
-#### VLAN Interfaces Device Configuration
-
-```eos
-!
-interface Vlan1810
-   description vrf-FW-HA-xco-firewall-site01
-   no shutdown
-   vrf FW-HA
-   ip address 10.18.10.212/24
-   vrrp 10 priority-level 200
-   vrrp 10 ipv4 10.18.10.254
-   vrrp 10 ipv4 version 3
 ```
 
 ## Routing
@@ -338,14 +231,12 @@ service routing protocols model multi-agent
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | True |
-| FW-HA | True |
 
 #### IP Routing Device Configuration
 
 ```eos
 !
 ip routing
-ip routing vrf FW-HA
 ```
 
 ### IPv6 Routing
@@ -355,22 +246,20 @@ ip routing vrf FW-HA
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | False |
-| FW-HA | false |
+| default | false |
 
 ### Static Routes
 
 #### Static Routes Summary
 
-| VRF | Destination Prefix | Next Hop IP             | Exit interface      | Administrative Distance       | Tag               | Route Name                    | Metric         |
-| --- | ------------------ | ----------------------- | ------------------- | ----------------------------- | ----------------- | ----------------------------- | -------------- |
-| FW-HA | 0.0.0.0/0 | 10.18.10.1 | - | 1 | - | - | - |
+| VRF | Destination Prefix | Next Hop IP | Exit interface | Administrative Distance | Tag | Route Name | Metric |
+| --- | ------------------ | ----------- | -------------- | ----------------------- | --- | ---------- | ------ |
 | default | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
 
 #### Static Routes Device Configuration
 
 ```eos
 !
-ip route vrf FW-HA 0.0.0.0/0 10.18.10.1
 ip route 0.0.0.0/0 192.168.2.1
 ```
 
@@ -380,12 +269,8 @@ ip route 0.0.0.0/0 192.168.2.1
 
 | VRF Name | IP Routing |
 | -------- | ---------- |
-| FW-HA | enabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
-!
-vrf instance FW-HA
-   description FW-HA VRF
 ```
