--- a/config-builder/documentation/devices/s1-pe02.md
+++ b/config-builder/documentation/devices/s1-pe02.md
@@ -5,19 +5,27 @@
 - [Management](#management)
   - [Management Interfaces](#management-interfaces)
   - [DNS Domain](#dns-domain)
+  - [IP Name Servers](#ip-name-servers)
+  - [Clock Settings](#clock-settings)
   - [NTP](#ntp)
   - [Management SSH](#management-ssh)
   - [Management API HTTP](#management-api-http)
 - [Authentication](#authentication)
   - [Local Users](#local-users)
+  - [Enable Password](#enable-password)
   - [AAA Authorization](#aaa-authorization)
-- [Aliases](#aliases)
+- [Aliases Device Configuration](#aliases-device-configuration)
+- [Spanning Tree](#spanning-tree)
+  - [Spanning Tree Summary](#spanning-tree-summary)
+  - [Spanning Tree Device Configuration](#spanning-tree-device-configuration)
+- [Internal VLAN Allocation Policy](#internal-vlan-allocation-policy)
+  - [Internal VLAN Allocation Policy Summary](#internal-vlan-allocation-policy-summary)
+  - [Internal VLAN Allocation Policy Device Configuration](#internal-vlan-allocation-policy-device-configuration)
 - [VLANs](#vlans)
   - [VLANs Summary](#vlans-summary)
   - [VLANs Device Configuration](#vlans-device-configuration)
 - [Interfaces](#interfaces)
   - [Ethernet Interfaces](#ethernet-interfaces)
-  - [Port-Channel Interfaces](#port-channel-interfaces)
   - [Loopback Interfaces](#loopback-interfaces)
   - [VLAN Interfaces](#vlan-interfaces)
 - [Routing](#routing)
@@ -26,14 +34,15 @@
   - [IP Routing](#ip-routing)
   - [IPv6 Routing](#ipv6-routing)
   - [Static Routes](#static-routes)
-  - [Router Traffic-Engineering](#router-traffic-engineering)
   - [Router ISIS](#router-isis)
   - [Router BGP](#router-bgp)
+- [BFD](#bfd)
+  - [Router BFD](#router-bfd)
 - [MPLS](#mpls)
   - [MPLS and LDP](#mpls-and-ldp)
-- [Filters](#filters)
-  - [Route-maps](#route-maps)
-  - [IP Extended Community Lists](#ip-extended-community-lists)
+  - [MPLS Interfaces](#mpls-interfaces)
+- [Multicast](#multicast)
+  - [IP IGMP Snooping](#ip-igmp-snooping)
 - [VRF Instances](#vrf-instances)
   - [VRF Instances Summary](#vrf-instances-summary)
   - [VRF Instances Device Configuration](#vrf-instances-device-configuration)
@@ -46,35 +55,65 @@
 
 ##### IPv4
 
-| Management Interface | description | Type | VRF | IP Address | Gateway |
+| Management Interface | Description | Type | VRF | IP Address | Gateway |
 | -------------------- | ----------- | ---- | --- | ---------- | ------- |
-| Management0 | oob_management | oob | default | 192.168.2.12/24 | 192.168.2.1 |
+| Management1 | OOB_MANAGEMENT | oob | MGMT | 192.168.2.12/24 | - |
 
 ##### IPv6
 
-| Management Interface | description | Type | VRF | IPv6 Address | IPv6 Gateway |
+| Management Interface | Description | Type | VRF | IPv6 Address | IPv6 Gateway |
 | -------------------- | ----------- | ---- | --- | ------------ | ------------ |
-| Management0 | oob_management | oob | default | - | - |
+| Management1 | OOB_MANAGEMENT | oob | MGMT | - | - |
 
 #### Management Interfaces Device Configuration
 
 ```eos
 !
-interface Management0
-   description oob_management
+interface Management1
+   description OOB_MANAGEMENT
    no shutdown
+   vrf MGMT
    ip address 192.168.2.12/24
 ```
 
 ### DNS Domain
 
-#### DNS domain: atd.lab
+DNS domain: atd.lab
 
 #### DNS Domain Device Configuration
 
 ```eos
 dns domain atd.lab
 !
+```
+
+### IP Name Servers
+
+#### IP Name Servers Summary
+
+| Name Server | VRF | Priority |
+| ----------- | --- | -------- |
+| 192.168.2.1 | MGMT | - |
+| 8.8.8.8 | MGMT | - |
+
+#### IP Name Servers Device Configuration
+
+```eos
+ip name-server vrf MGMT 8.8.8.8
+ip name-server vrf MGMT 192.168.2.1
+```
+
+### Clock Settings
+
+#### Clock Timezone Settings
+
+Clock Timezone is set to **Europe/Paris**.
+
+#### Clock Device Configuration
+
+```eos
+!
+clock timezone Europe/Paris
 ```
 
 ### NTP
@@ -105,8 +144,7 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 
 ### Management SSH
 
-
-#### SSH timeout and management
+#### SSH Timeout and Management
 
 | Idle Timeout | SSH Management |
 | ------------ | -------------- |
@@ -118,7 +156,7 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 | ---------------- | ---------------------- |
 | - | - |
 
-#### Ciphers and algorithms
+#### Ciphers and Algorithms
 
 | Ciphers | Key-exchange methods | MAC algorithms | Hostkey server algorithms |
 |---------|----------------------|----------------|---------------------------|
@@ -130,7 +168,7 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 | --- | ------ |
 | default | Enabled |
 
-#### Management SSH Configuration
+#### Management SSH Device Configuration
 
 ```eos
 !
@@ -153,9 +191,9 @@ management ssh
 
 | VRF Name | IPv4 ACL | IPv6 ACL |
 | -------- | -------- | -------- |
-| default | - | - |
+| MGMT | - | - |
 
-#### Management API HTTP Configuration
+#### Management API HTTP Device Configuration
 
 ```eos
 !
@@ -163,7 +201,7 @@ management api http-commands
    protocol https
    no shutdown
    !
-   vrf default
+   vrf MGMT
       no shutdown
 ```
 
@@ -190,6 +228,10 @@ username arista privilege 15 role network-admin secret sha512 <removed>
 username tom privilege 15 role network-admin secret sha512 <removed>
 ```
 
+### Enable Password
+
+Enable password has been disabled
+
 ### AAA Authorization
 
 #### AAA Authorization Summary
@@ -207,7 +249,7 @@ aaa authorization exec default local
 !
 ```
 
-## Aliases
+## Aliases Device Configuration
 
 ```eos
 alias ale show ip hardware ale routes unprogrammed
@@ -231,24 +273,48 @@ alias summary6 show ipv6 bgp summary
 !
 ```
 
+## Spanning Tree
+
+### Spanning Tree Summary
+
+STP mode: **none**
+
+### Spanning Tree Device Configuration
+
+```eos
+!
+spanning-tree mode none
+```
+
+## Internal VLAN Allocation Policy
+
+### Internal VLAN Allocation Policy Summary
+
+| Policy Allocation | Range Beginning | Range Ending |
+| ------------------| --------------- | ------------ |
+| ascending | 1006 | 1199 |
+
+### Internal VLAN Allocation Policy Device Configuration
+
+```eos
+!
+vlan internal order ascending range 1006 1199
+```
+
 ## VLANs
 
 ### VLANs Summary
 
 | VLAN ID | Name | Trunk Groups |
 | ------- | ---- | ------------ |
-| 1810 | S1-FW-XCO | - |
-| 2001 | BKP-SITE01 | - |
+| 1811 | SVC01_C1_VLAN_FIREWALL | - |
 
 ### VLANs Device Configuration
 
 ```eos
 !
-vlan 1810
-   name S1-FW-XCO
-!
-vlan 2001
-   name BKP-SITE01
+vlan 1811
+   name SVC01_C1_VLAN_FIREWALL
 ```
 
 ## Interfaces
@@ -261,97 +327,56 @@ vlan 2001
 
 | Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
 | --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
-| Ethernet4 | - | *trunk | *1810,2001 | *- | *- | 4 |
 
 *Inherited from Port-Channel Interface
 
 ##### IPv4
 
-| Interface | Description | Type | Channel Group | IP Address | VRF |  MTU | Shutdown | ACL In | ACL Out |
-| --------- | ----------- | -----| ------------- | ---------- | ----| ---- | -------- | ------ | ------- |
-| Ethernet1 | S1-P01_Ethernet2 | routed | - | 10.0.1.4/31 | default | 1500 | False | - | - |
-| Ethernet2 | S1-P02_Ethernet1 | routed | - | 10.0.1.6/31 | default | 1500 | False | - | - |
+| Interface | Description | Channel Group | IP Address | VRF |  MTU | Shutdown | ACL In | ACL Out |
+| --------- | ----------- | ------------- | ---------- | ----| ---- | -------- | ------ | ------- |
+| Ethernet1 | P2P_s1-p01_Ethernet2 | - | 10.255.3.4/31 | default | 1500 | False | - | - |
+| Ethernet2 | P2P_s1-p02_Ethernet2 | - | 10.255.3.6/31 | default | 1500 | False | - | - |
 
 ##### ISIS
 
-| Interface | Channel Group | ISIS Instance | ISIS Metric | Mode | ISIS Circuit Type | Hello Padding | Authentication Mode |
-| --------- | ------------- | ------------- | ----------- | ---- | ----------------- | ------------- | ------------------- |
-| Ethernet1 | - | CORE-ISIS | - | point-to-point | - | - | - |
-| Ethernet2 | - | CORE-ISIS | - | point-to-point | - | - | - |
+| Interface | Channel Group | ISIS Instance | ISIS BFD | ISIS Metric | Mode | ISIS Circuit Type | Hello Padding | ISIS Authentication Mode |
+| --------- | ------------- | ------------- | -------- | ----------- | ---- | ----------------- | ------------- | ------------------------ |
+| Ethernet1 | - | CORE | - | 50 | point-to-point | level-2 | True | md5 |
+| Ethernet2 | - | CORE | - | 50 | point-to-point | level-2 | True | md5 |
 
 #### Ethernet Interfaces Device Configuration
 
 ```eos
 !
 interface Ethernet1
-   description S1-P01_Ethernet2
+   description P2P_s1-p01_Ethernet2
    no shutdown
    mtu 1500
    no switchport
-   ip address 10.0.1.4/31
-   isis enable CORE-ISIS
+   ip address 10.255.3.4/31
+   mpls ip
+   isis enable CORE
+   isis circuit-type level-2
+   isis metric 50
+   isis hello padding
    isis network point-to-point
+   isis authentication mode md5
+   isis authentication key 7 <removed>
 !
 interface Ethernet2
-   description S1-P02_Ethernet1
+   description P2P_s1-p02_Ethernet2
    no shutdown
    mtu 1500
    no switchport
-   ip address 10.0.1.6/31
-   isis enable CORE-ISIS
+   ip address 10.255.3.6/31
+   mpls ip
+   isis enable CORE
+   isis circuit-type level-2
+   isis metric 50
+   isis hello padding
    isis network point-to-point
-!
-interface Ethernet4
-   no shutdown
-   switchport
-   channel-group 4 mode active
-```
-
-### Port-Channel Interfaces
-
-#### Port-Channel Interfaces Summary
-
-##### L2
-
-| Interface | Description | Type | Mode | VLANs | Native VLAN | Trunk Group | LACP Fallback Timeout | LACP Fallback Mode | MLAG ID | EVPN ESI |
-| --------- | ----------- | ---- | ---- | ----- | ----------- | ------------| --------------------- | ------------------ | ------- | -------- |
-| Port-Channel4 | to s1-ce01 - CLIENT use-case - Firewall emulation VRRP | switched | trunk | 1810,2001 | - | - | - | - | - | 0000:0000:0101:0101:0101 |
-
-##### EVPN Multihoming
-
-####### EVPN Multihoming Summary
-
-| Interface | Ethernet Segment Identifier | Multihoming Redundancy Mode | Route Target |
-| --------- | --------------------------- | --------------------------- | ------------ |
-| Port-Channel4 | 0000:0000:0101:0101:0101 | all-active | 01:01:01:01:01:01 |
-
-####### Designated Forwarder Election Summary
-
-| Interface | Algorithm | Preference Value | Dont Preempt | Hold time | Subsequent Hold Time | Candidate Reachability Required |
-| --------- | --------- | ---------------- | ------------ | --------- | -------------------- | ------------------------------- |
-| Port-Channel4 | modulus | - | False | 1 | - | False |
-
-####### EVPN-MPLS summary
-
-| Interface | Shared Index | Tunnel Flood Filter Time |
-| --------- | ------------ | ------------------------ |
-| Port-Channel4 | 100 | - |
-
-#### Port-Channel Interfaces Device Configuration
-
-```eos
-!
-interface Port-Channel4
-   description to s1-ce01 - CLIENT use-case - Firewall emulation VRRP
-   switchport
-   switchport trunk allowed vlan 1810,2001
-   switchport mode trunk
-   evpn ethernet-segment
-      identifier 0000:0000:0101:0101:0101
-      designated-forwarder election hold-time 1
-      mpls shared index 100
-      route-target import 01:01:01:01:01:01
-   lacp system-id 0101.0101.0101
+   isis authentication mode md5
+   isis authentication key 7 <removed>
 ```
 
 ### Loopback Interfaces
@@ -362,40 +387,39 @@ interface Port-Channel4
 
 | Interface | Description | VRF | IP Address |
 | --------- | ----------- | --- | ---------- |
-| Loopback0 | Router ID | default | 1.0.0.12/32 |
-| Loopback1018 | Router ID | FW-HA | 1.18.10.12/32 |
+| Loopback0 | ROUTER_ID | default | 10.255.1.2/32 |
+| Loopback1810 | Test loopback | SVC01_VRF01 | 10.18.0.2/32 |
 
 ##### IPv6
 
 | Interface | Description | VRF | IPv6 Address |
 | --------- | ----------- | --- | ------------ |
-| Loopback0 | Router ID | default | - |
-| Loopback1018 | Router ID | FW-HA | - |
+| Loopback0 | ROUTER_ID | default | - |
+| Loopback1810 | Test loopback | SVC01_VRF01 | - |
 
 ##### ISIS
 
 | Interface | ISIS instance | ISIS metric | Interface mode |
 | --------- | ------------- | ----------- | -------------- |
-| Loopback0 | CORE-ISIS | - | passive |
+| Loopback0 | CORE | - | passive |
 
 #### Loopback Interfaces Device Configuration
 
 ```eos
 !
 interface Loopback0
-   description Router ID
+   description ROUTER_ID
    no shutdown
-   vrf default
-   ip address 1.0.0.12/32
-   isis enable CORE-ISIS
+   ip address 10.255.1.2/32
+   node-segment ipv4 index 2
+   isis enable CORE
    isis passive
-   node-segment ipv4 index 12
 !
-interface Loopback1018
-   description Router ID
+interface Loopback1810
+   description Test loopback
    no shutdown
-   vrf FW-HA
-   ip address 1.18.10.12/32
+   vrf SVC01_VRF01
+   ip address 10.18.0.2/32
 ```
 
 ### VLAN Interfaces
@@ -404,33 +428,23 @@ interface Loopback1018
 
 | Interface | Description | VRF |  MTU | Shutdown |
 | --------- | ----------- | --- | ---- | -------- |
-| Vlan1810 | vrf-FW-HA-xco-firewall-site01 | FW-HA | - | False |
-| Vlan2001 | vrf-bkp-backup-flows | BKP | - | False |
+| Vlan1811 | SVC01_C1_VLAN_FIREWALL | SVC01_VRF01 | - | False |
 
 ##### IPv4
 
-| Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | VRRP | ACL In | ACL Out |
-| --------- | --- | ---------- | ------------------ | ------------------------- | ---- | ------ | ------- |
-| Vlan1810 |  FW-HA  |  10.18.10.12/24  |  -  |  10.18.10.1  |  -  |  -  |  -  |
-| Vlan2001 |  BKP  |  10.200.1.12/24  |  -  |  10.200.1.1  |  -  |  -  |  -  |
+| Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
+| --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
+| Vlan1811 |  SVC01_VRF01  |  -  |  10.18.11.1/24  |  -  |  -  |  -  |
 
 #### VLAN Interfaces Device Configuration
 
 ```eos
 !
-interface Vlan1810
-   description vrf-FW-HA-xco-firewall-site01
+interface Vlan1811
+   description SVC01_C1_VLAN_FIREWALL
    no shutdown
-   vrf FW-HA
-   ip address 10.18.10.12/24
-   ip virtual-router address 10.18.10.1
-!
-interface Vlan2001
-   description vrf-bkp-backup-flows
-   no shutdown
-   vrf BKP
-   ip address 10.200.1.12/24
-   ip virtual-router address 10.200.1.1
+   vrf SVC01_VRF01
+   ip address virtual 10.18.11.1/24
 ```
 
 ## Routing
@@ -448,13 +462,13 @@ service routing protocols model multi-agent
 
 #### Virtual Router MAC Address Summary
 
-##### Virtual Router MAC Address: 00:1c:73:00:dc:01
+Virtual Router MAC Address: 00:1c:73:00:dc:00
 
-#### Virtual Router MAC Address Configuration
+#### Virtual Router MAC Address Device Configuration
 
 ```eos
 !
-ip virtual-router mac-address 00:1c:73:00:dc:01
+ip virtual-router mac-address 00:1c:73:00:dc:00
 ```
 
 ### IP Routing
@@ -464,16 +478,16 @@ ip virtual-router mac-address 00:1c:73:00:dc:01
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | True |
-| BKP | True |
-| FW-HA | True |
+| MGMT | False |
+| SVC01_VRF01 | True |
 
 #### IP Routing Device Configuration
 
 ```eos
 !
 ip routing
-ip routing vrf BKP
-ip routing vrf FW-HA
+no ip routing vrf MGMT
+ip routing vrf SVC01_VRF01
 ```
 
 ### IPv6 Routing
@@ -483,15 +497,15 @@ ip routing vrf FW-HA
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | False |
-| BKP | false |
-| FW-HA | false |
+| MGMT | false |
+| SVC01_VRF01 | false |
 
 ### Static Routes
 
 #### Static Routes Summary
 
-| VRF | Destination Prefix | Next Hop IP             | Exit interface      | Administrative Distance       | Tag               | Route Name                    | Metric         |
-| --- | ------------------ | ----------------------- | ------------------- | ----------------------------- | ----------------- | ----------------------------- | -------------- |
+| VRF | Destination Prefix | Next Hop IP | Exit interface | Administrative Distance | Tag | Route Name | Metric |
+| --- | ------------------ | ----------- | -------------- | ----------------------- | --- | ---------- | ------ |
 | default | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
 
 #### Static Routes Device Configuration
@@ -501,33 +515,16 @@ ip routing vrf FW-HA
 ip route 0.0.0.0/0 192.168.2.1
 ```
 
-### Router Traffic-Engineering
-
-#### Segment Routing Summary
-
-- SRTE is enabled.
-
-- system-colored-tunnel-rib is enabled
-
-#### Router Traffic Engineering Device Configuration
-
-```eos
-!
-router traffic-engineering
-   segment-routing
-      rib system-colored-tunnel-rib
-```
-
 ### Router ISIS
 
 #### Router ISIS Summary
 
 | Settings | Value |
 | -------- | ----- |
-| Instance | CORE-ISIS |
-| Net-ID | 49.0192.0168.0000.0012.00 |
+| Instance | CORE |
+| Net-ID | 49.0001.0102.5500.1002.00 |
 | Type | level-2 |
-| Router-ID | 1.0.0.12 |
+| Router-ID | 10.255.1.2 |
 | Log Adjacency Changes | True |
 | Advertise Passive-only | True |
 | SR MPLS Enabled | True |
@@ -536,113 +533,86 @@ router traffic-engineering
 
 | Interface | ISIS Instance | ISIS Metric | Interface Mode |
 | --------- | ------------- | ----------- | -------------- |
-| Ethernet1 | CORE-ISIS | - | point-to-point |
-| Ethernet2 | CORE-ISIS | - | point-to-point |
-| Loopback0 | CORE-ISIS | - | passive |
+| Ethernet1 | CORE | 50 | point-to-point |
+| Ethernet2 | CORE | 50 | point-to-point |
+| Loopback0 | CORE | - | passive |
 
 #### ISIS Segment-routing Node-SID
 
 | Loopback | IPv4 Index | IPv6 Index |
 | -------- | ---------- | ---------- |
-| Loopback0 | 12 | - |
-
-#### Prefix Segments
-
-| Prefix Segment | Index |
-| -------------- | ----- |
-| 10.0.0.0/31 | 50000 |
-| 10.0.0.2/31 | 50002 |
-| 10.0.0.4/31 | 50004 |
-| 10.0.0.6/31 | 50006 |
-| 10.0.0.8/31 | 50008 |
-| 10.0.1.0/31 | 50010 |
-| 10.0.1.2/31 | 50012 |
-| 10.0.1.4/31 | 50014 |
-| 10.0.1.6/31 | 50016 |
-| 10.0.1.8/31 | 50018 |
-| 10.0.1.10/31 | 50100 |
-| 10.0.1.12/31 | 50112 |
-| 10.0.1.14/31 | 50114 |
-| 10.0.2.0/31 | 50020 |
-| 10.0.2.2/31 | 50022 |
+| Loopback0 | 2 | - |
 
 #### ISIS IPv4 Address Family Summary
 
 | Settings | Value |
 | -------- | ----- |
 | IPv4 Address-family Enabled | True |
+| Maximum-paths | 4 |
 | TI-LFA Mode | link-protection |
 
 #### Router ISIS Device Configuration
 
 ```eos
 !
-router isis CORE-ISIS
-   net 49.0192.0168.0000.0012.00
+router isis CORE
+   net 49.0001.0102.5500.1002.00
+   router-id ipv4 10.255.1.2
    is-type level-2
-   router-id ipv4 1.0.0.12
    log-adjacency-changes
    advertise passive-only
    !
    address-family ipv4 unicast
+      maximum-paths 4
       fast-reroute ti-lfa mode link-protection
    !
    segment-routing mpls
       no shutdown
-      prefix-segment 10.0.0.0/31 index 50000
-      prefix-segment 10.0.0.2/31 index 50002
-      prefix-segment 10.0.0.4/31 index 50004
-      prefix-segment 10.0.0.6/31 index 50006
-      prefix-segment 10.0.0.8/31 index 50008
-      prefix-segment 10.0.1.0/31 index 50010
-      prefix-segment 10.0.1.2/31 index 50012
-      prefix-segment 10.0.1.4/31 index 50014
-      prefix-segment 10.0.1.6/31 index 50016
-      prefix-segment 10.0.1.8/31 index 50018
-      prefix-segment 10.0.1.10/31 index 50100
-      prefix-segment 10.0.1.12/31 index 50112
-      prefix-segment 10.0.1.14/31 index 50114
-      prefix-segment 10.0.2.0/31 index 50020
-      prefix-segment 10.0.2.2/31 index 50022
 ```
 
 ### Router BGP
+
+ASN Notation: asplain
 
 #### Router BGP Summary
 
 | BGP AS | Router ID |
 | ------ | --------- |
-| 65000 | 1.0.0.12 |
+| 65001 | 10.255.1.2 |
 
 | BGP Tuning |
 | ---------- |
+| update wait-install |
 | no bgp default ipv4-unicast |
 | maximum-paths 4 ecmp 4 |
 
 #### Router BGP Peer Groups
 
-##### EVPN-CORE
+##### MPLS-OVERLAY-PEERS
 
 | Settings | Value |
 | -------- | ----- |
-| Address Family | ipv4 |
+| Address Family | mpls |
+| Remote AS | 65001 |
 | Source | Loopback0 |
-| Send community | standard extended |
+| BFD | True |
+| Send community | all |
+| Maximum routes | 0 (no limit) |
 
 #### BGP Neighbors
 
-| Neighbor | Remote AS | VRF | Shutdown | Send-community | Maximum-routes | Allowas-in | BFD | RIB Pre-Policy Retain | Route-Reflector Client | Passive |
-| -------- | --------- | --- | -------- | -------------- | -------------- | ---------- | --- | --------------------- | ---------------------- | ------- |
-| 1.0.0.111 | 65000 | default | - | Inherited from peer group EVPN-CORE | - | - | - | - | - | - |
-| 1.0.0.121 | 65000 | default | - | Inherited from peer group EVPN-CORE | - | - | - | - | - | - |
+| Neighbor | Remote AS | VRF | Shutdown | Send-community | Maximum-routes | Allowas-in | BFD | RIB Pre-Policy Retain | Route-Reflector Client | Passive | TTL Max Hops |
+| -------- | --------- | --- | -------- | -------------- | -------------- | ---------- | --- | --------------------- | ---------------------- | ------- | ------------ |
+| 10.255.0.1 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - | - | - |
+| 10.255.0.4 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - | - | - |
 
 #### Router BGP EVPN Address Family
 
 ##### EVPN Peer Groups
 
-| Peer Group | Activate | Encapsulation |
-| ---------- | -------- | ------------- |
-| EVPN-CORE | True | mpls |
+| Peer Group | Activate | Route-map In | Route-map Out | Encapsulation |
+| ---------- | -------- | ------------ | ------------- | ------------- |
+| MPLS-OVERLAY-PEERS | True |  - | - | default |
 
 ##### EVPN Neighbor Default Encapsulation
 
@@ -654,58 +624,71 @@ router isis CORE-ISIS
 
 | VLAN | Route-Distinguisher | Both Route-Target | Import Route Target | Export Route-Target | Redistribute |
 | ---- | ------------------- | ----------------- | ------------------- | ------------------- | ------------ |
-| 1810 | 1.0.0.12:1810 | 1810:1810 | - | - | learned<br>router-mac system default-gateway |
+| 1811 | 10.255.1.2:11811 | 11811:11811 | - | - | learned |
 
 #### Router BGP VRFs
 
 | VRF | Route-Distinguisher | Redistribute |
 | --- | ------------------- | ------------ |
-| BKP | 1.0.0.12:2 | static<br>connected |
-| FW-HA | 1.0.0.12:1 | static<br>connected |
+| SVC01_VRF01 | 10.255.1.2:10 | connected |
 
 #### Router BGP Device Configuration
 
 ```eos
 !
-router bgp 65000
-   router-id 1.0.0.12
-   maximum-paths 4 ecmp 4
+router bgp 65001
+   router-id 10.255.1.2
+   update wait-install
    no bgp default ipv4-unicast
-   neighbor EVPN-CORE peer group
-   neighbor EVPN-CORE update-source Loopback0
-   neighbor EVPN-CORE send-community standard extended
-   neighbor EVPN-CORE route-map RM-SET-COLOR in
-   neighbor 1.0.0.111 peer group EVPN-CORE
-   neighbor 1.0.0.111 remote-as 65000
-   neighbor 1.0.0.111 description s2-p01
-   neighbor 1.0.0.121 peer group EVPN-CORE
-   neighbor 1.0.0.121 remote-as 65000
-   neighbor 1.0.0.121 description s2-p01
+   maximum-paths 4 ecmp 4
+   neighbor MPLS-OVERLAY-PEERS peer group
+   neighbor MPLS-OVERLAY-PEERS remote-as 65001
+   neighbor MPLS-OVERLAY-PEERS update-source Loopback0
+   neighbor MPLS-OVERLAY-PEERS bfd
+   neighbor MPLS-OVERLAY-PEERS password 7 <removed>
+   neighbor MPLS-OVERLAY-PEERS send-community
+   neighbor MPLS-OVERLAY-PEERS maximum-routes 0
+   neighbor 10.255.0.1 peer group MPLS-OVERLAY-PEERS
+   neighbor 10.255.0.1 description s1-p01_Loopback0
+   neighbor 10.255.0.4 peer group MPLS-OVERLAY-PEERS
+   neighbor 10.255.0.4 description s2-p02_Loopback0
    !
-   vlan 1810
-      rd 1.0.0.12:1810
-      route-target both 1810:1810
+   vlan 1811
+      rd 10.255.1.2:11811
+      route-target both 11811:11811
       redistribute learned
-      redistribute router-mac system default-gateway
    !
    address-family evpn
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
-      neighbor EVPN-CORE activate
-      neighbor EVPN-CORE encapsulation mpls
+      neighbor MPLS-OVERLAY-PEERS activate
    !
-   vrf BKP
-      rd 1.0.0.12:2
-      route-target import evpn 1:2
-      route-target export evpn 1:2
-      redistribute connected
-      redistribute static
+   address-family ipv4
+      no neighbor MPLS-OVERLAY-PEERS activate
    !
-   vrf FW-HA
-      rd 1.0.0.12:1
-      route-target import evpn 1:1
-      route-target export evpn 1:1
+   vrf SVC01_VRF01
+      rd 10.255.1.2:10
+      route-target import evpn 10:10
+      route-target export evpn 10:10
+      router-id 10.255.1.2
       redistribute connected
-      redistribute static
+```
+
+## BFD
+
+### Router BFD
+
+#### Router BFD Multihop Summary
+
+| Interval | Minimum RX | Multiplier |
+| -------- | ---------- | ---------- |
+| 300 | 300 | 3 |
+
+#### Router BFD Device Configuration
+
+```eos
+!
+router bfd
+   multihop interval 300 min-rx 300 multiplier 3
 ```
 
 ## MPLS
@@ -722,55 +705,33 @@ router bgp 65000
 | LDP Interface Disabled Default | - |
 | LDP Transport-Address Interface | - |
 
-#### MPLS and LDP Configuration
+#### MPLS and LDP Device Configuration
 
 ```eos
 !
 mpls ip
 ```
 
-## Filters
+### MPLS Interfaces
 
-### Route-maps
+| Interface | MPLS IP Enabled | LDP Enabled | IGP Sync |
+| --------- | --------------- | ----------- | -------- |
+| Ethernet1 | True | - | - |
+| Ethernet2 | True | - | - |
 
-#### Route-maps Summary
+## Multicast
 
-##### RM-SET-COLOR
+### IP IGMP Snooping
 
-| Sequence | Type | Match | Set | Sub-Route-Map | Continue |
-| -------- | ---- | ----- | --- | ------------- | -------- |
-| 10 | permit | extcommunity EXTCOM-BKP | extcommunity color 300 additive | - | - |
-| 90 | permit | - | - | - | - |
+#### IP IGMP Snooping Summary
 
-#### Route-maps Device Configuration
+| IGMP Snooping | Fast Leave | Interface Restart Query | Proxy | Restart Query Interval | Robustness Variable |
+| ------------- | ---------- | ----------------------- | ----- | ---------------------- | ------------------- |
+| Enabled | - | - | - | - | - |
 
-```eos
-!
-route-map RM-SET-COLOR permit 10
-   description Add COLOR-02-BKP to BKP routes
-   match extcommunity EXTCOM-BKP
-   set extcommunity color 300 additive
-!
-route-map RM-SET-COLOR permit 90
-   description Default permit
-```
-
-### IP Extended Community Lists
-
-#### IP Extended Community Lists Summary
-
-| List Name | Type | Extended Communities |
-| --------- | ---- | -------------------- |
-| EXTCOM-BKP | permit | rt 1:2 |
-| EXTCOM-CLIENT | permit | rt 1:1 |
-
-#### IP Extended Community Lists configuration
+#### IP IGMP Snooping Device Configuration
 
 ```eos
-!
-ip extcommunity-list EXTCOM-BKP permit rt 1:2
-!
-ip extcommunity-list EXTCOM-CLIENT permit rt 1:1
 ```
 
 ## VRF Instances
@@ -779,16 +740,14 @@ ip extcommunity-list EXTCOM-CLIENT permit rt 1:1
 
 | VRF Name | IP Routing |
 | -------- | ---------- |
-| BKP | enabled |
-| FW-HA | enabled |
+| MGMT | disabled |
+| SVC01_VRF01 | enabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
 !
-vrf instance BKP
-   description BACKUP VRF
+vrf instance MGMT
 !
-vrf instance FW-HA
-   description FW-HA VRF
+vrf instance SVC01_VRF01
 ```
