--- a/config-builder/documentation/devices/s2-ce01.md
+++ b/config-builder/documentation/devices/s2-ce01.md
@@ -11,13 +11,7 @@
 - [Authentication](#authentication)
   - [Local Users](#local-users)
   - [AAA Authorization](#aaa-authorization)
-- [Aliases](#aliases)
-- [VLANs](#vlans)
-  - [VLANs Summary](#vlans-summary)
-  - [VLANs Device Configuration](#vlans-device-configuration)
-- [Interfaces](#interfaces)
-  - [Ethernet Interfaces](#ethernet-interfaces)
-  - [VLAN Interfaces](#vlan-interfaces)
+- [Aliases Device Configuration](#aliases-device-configuration)
 - [Routing](#routing)
   - [Service Routing Protocols Model](#service-routing-protocols-model)
   - [IP Routing](#ip-routing)
@@ -35,13 +29,13 @@
 
 ##### IPv4
 
-| Management Interface | description | Type | VRF | IP Address | Gateway |
+| Management Interface | Description | Type | VRF | IP Address | Gateway |
 | -------------------- | ----------- | ---- | --- | ---------- | ------- |
 | Management0 | oob_management | oob | default | 192.168.2.221/24 | 192.168.2.1 |
 
 ##### IPv6
 
-| Management Interface | description | Type | VRF | IPv6 Address | IPv6 Gateway |
+| Management Interface | Description | Type | VRF | IPv6 Address | IPv6 Gateway |
 | -------------------- | ----------- | ---- | --- | ------------ | ------------ |
 | Management0 | oob_management | oob | default | - | - |
 
@@ -57,7 +51,7 @@ interface Management0
 
 ### DNS Domain
 
-#### DNS domain: atd.lab
+DNS domain: atd.lab
 
 #### DNS Domain Device Configuration
 
@@ -94,8 +88,7 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 
 ### Management SSH
 
-
-#### SSH timeout and management
+#### SSH Timeout and Management
 
 | Idle Timeout | SSH Management |
 | ------------ | -------------- |
@@ -107,7 +100,7 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 | ---------------- | ---------------------- |
 | - | - |
 
-#### Ciphers and algorithms
+#### Ciphers and Algorithms
 
 | Ciphers | Key-exchange methods | MAC algorithms | Hostkey server algorithms |
 |---------|----------------------|----------------|---------------------------|
@@ -119,7 +112,7 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 | --- | ------ |
 | default | Enabled |
 
-#### Management SSH Configuration
+#### Management SSH Device Configuration
 
 ```eos
 !
@@ -144,7 +137,7 @@ management ssh
 | -------- | -------- | -------- |
 | default | - | - |
 
-#### Management API HTTP Configuration
+#### Management API HTTP Device Configuration
 
 ```eos
 !
@@ -196,7 +189,7 @@ aaa authorization exec default local
 !
 ```
 
-## Aliases
+## Aliases Device Configuration
 
 ```eos
 alias ale show ip hardware ale routes unprogrammed
@@ -216,86 +209,8 @@ alias sli show lacp interface Ethernet %1 detailed
 alias sqnz show interface counter queue | nz
 alias srnz show interface counter rate | nz
 alias summary show bgp summary
-alias summary6 show ipv6 bgp summary
+
 !
-```
-
-## VLANs
-
-### VLANs Summary
-
-| VLAN ID | Name | Trunk Groups |
-| ------- | ---- | ------------ |
-| 1811 | S2-REMOTE-END-XCO | - |
-| 2002 | BKP-SITE02 | - |
-
-### VLANs Device Configuration
-
-```eos
-!
-vlan 1811
-   name S2-REMOTE-END-XCO
-!
-vlan 2002
-   name BKP-SITE02
-```
-
-## Interfaces
-
-### Ethernet Interfaces
-
-#### Ethernet Interfaces Summary
-
-##### L2
-
-| Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
-| --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
-| Ethernet1 |  to s2-pe01 - CLIENT use-case - Remote end | trunk | 1811, 2002 | - | - | - |
-
-*Inherited from Port-Channel Interface
-
-#### Ethernet Interfaces Device Configuration
-
-```eos
-!
-interface Ethernet1
-   description to s2-pe01 - CLIENT use-case - Remote end
-   switchport trunk allowed vlan 1811, 2002
-   switchport mode trunk
-   switchport
-```
-
-### VLAN Interfaces
-
-#### VLAN Interfaces Summary
-
-| Interface | Description | VRF |  MTU | Shutdown |
-| --------- | ----------- | --- | ---- | -------- |
-| Vlan1811 | vrf-FW-HA-xco-firewall-site01 | FW-HA | - | False |
-| Vlan2002 | vrf-bkp-xco-site02 | BKP | - | False |
-
-##### IPv4
-
-| Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | VRRP | ACL In | ACL Out |
-| --------- | --- | ---------- | ------------------ | ------------------------- | ---- | ------ | ------- |
-| Vlan1811 |  FW-HA  |  10.18.11.221/24  |  -  |  -  |  -  |  -  |  -  |
-| Vlan2002 |  BKP  |  10.200.2.221/24  |  -  |  -  |  -  |  -  |  -  |
-
-#### VLAN Interfaces Device Configuration
-
-```eos
-!
-interface Vlan1811
-   description vrf-FW-HA-xco-firewall-site01
-   no shutdown
-   vrf FW-HA
-   ip address 10.18.11.221/24
-!
-interface Vlan2002
-   description vrf-bkp-xco-site02
-   no shutdown
-   vrf BKP
-   ip address 10.200.2.221/24
 ```
 
 ## Routing
@@ -316,16 +231,12 @@ service routing protocols model multi-agent
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | True |
-| BKP | True |
-| FW-HA | True |
 
 #### IP Routing Device Configuration
 
 ```eos
 !
 ip routing
-ip routing vrf BKP
-ip routing vrf FW-HA
 ```
 
 ### IPv6 Routing
@@ -335,25 +246,20 @@ ip routing vrf FW-HA
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | False |
-| BKP | false |
-| FW-HA | false |
+| default | false |
 
 ### Static Routes
 
 #### Static Routes Summary
 
-| VRF | Destination Prefix | Next Hop IP             | Exit interface      | Administrative Distance       | Tag               | Route Name                    | Metric         |
-| --- | ------------------ | ----------------------- | ------------------- | ----------------------------- | ----------------- | ----------------------------- | -------------- |
-| FW-HA | 0.0.0.0/0 | 10.18.11.1 | - | 1 | - | - | - |
-| BKP | 0.0.0.0/0 | 10.200.2.1 | - | 1 | - | - | - |
+| VRF | Destination Prefix | Next Hop IP | Exit interface | Administrative Distance | Tag | Route Name | Metric |
+| --- | ------------------ | ----------- | -------------- | ----------------------- | --- | ---------- | ------ |
 | default | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
 
 #### Static Routes Device Configuration
 
 ```eos
 !
-ip route vrf FW-HA 0.0.0.0/0 10.18.11.1
-ip route vrf BKP 0.0.0.0/0 10.200.2.1
 ip route 0.0.0.0/0 192.168.2.1
 ```
 
@@ -363,16 +269,8 @@ ip route 0.0.0.0/0 192.168.2.1
 
 | VRF Name | IP Routing |
 | -------- | ---------- |
-| BKP | enabled |
-| FW-HA | enabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
-!
-vrf instance BKP
-   description BACKUP VRF
-!
-vrf instance FW-HA
-   description FW-HA VRF
 ```
