--- a/config-builder/documentation/devices/s2-p02.md
+++ b/config-builder/documentation/devices/s2-p02.md
@@ -5,13 +5,22 @@
 - [Management](#management)
   - [Management Interfaces](#management-interfaces)
   - [DNS Domain](#dns-domain)
+  - [IP Name Servers](#ip-name-servers)
+  - [Clock Settings](#clock-settings)
   - [NTP](#ntp)
   - [Management SSH](#management-ssh)
   - [Management API HTTP](#management-api-http)
 - [Authentication](#authentication)
   - [Local Users](#local-users)
+  - [Enable Password](#enable-password)
   - [AAA Authorization](#aaa-authorization)
-- [Aliases](#aliases)
+- [Aliases Device Configuration](#aliases-device-configuration)
+- [Spanning Tree](#spanning-tree)
+  - [Spanning Tree Summary](#spanning-tree-summary)
+  - [Spanning Tree Device Configuration](#spanning-tree-device-configuration)
+- [Internal VLAN Allocation Policy](#internal-vlan-allocation-policy)
+  - [Internal VLAN Allocation Policy Summary](#internal-vlan-allocation-policy-summary)
+  - [Internal VLAN Allocation Policy Device Configuration](#internal-vlan-allocation-policy-device-configuration)
 - [Interfaces](#interfaces)
   - [Ethernet Interfaces](#ethernet-interfaces)
   - [Loopback Interfaces](#loopback-interfaces)
@@ -20,10 +29,13 @@
   - [IP Routing](#ip-routing)
   - [IPv6 Routing](#ipv6-routing)
   - [Static Routes](#static-routes)
-  - [Router Traffic-Engineering](#router-traffic-engineering)
   - [Router ISIS](#router-isis)
+  - [Router BGP](#router-bgp)
+- [BFD](#bfd)
+  - [Router BFD](#router-bfd)
 - [MPLS](#mpls)
   - [MPLS and LDP](#mpls-and-ldp)
+  - [MPLS Interfaces](#mpls-interfaces)
 - [VRF Instances](#vrf-instances)
   - [VRF Instances Summary](#vrf-instances-summary)
   - [VRF Instances Device Configuration](#vrf-instances-device-configuration)
@@ -36,35 +48,65 @@
 
 ##### IPv4
 
-| Management Interface | description | Type | VRF | IP Address | Gateway |
+| Management Interface | Description | Type | VRF | IP Address | Gateway |
 | -------------------- | ----------- | ---- | --- | ---------- | ------- |
-| Management0 | oob_management | oob | default | 192.168.2.122/24 | 192.168.2.1 |
+| Management1 | OOB_MANAGEMENT | oob | MGMT | 192.168.2.122/24 | - |
 
 ##### IPv6
 
-| Management Interface | description | Type | VRF | IPv6 Address | IPv6 Gateway |
+| Management Interface | Description | Type | VRF | IPv6 Address | IPv6 Gateway |
 | -------------------- | ----------- | ---- | --- | ------------ | ------------ |
-| Management0 | oob_management | oob | default | - | - |
+| Management1 | OOB_MANAGEMENT | oob | MGMT | - | - |
 
 #### Management Interfaces Device Configuration
 
 ```eos
 !
-interface Management0
-   description oob_management
+interface Management1
+   description OOB_MANAGEMENT
    no shutdown
+   vrf MGMT
    ip address 192.168.2.122/24
 ```
 
 ### DNS Domain
 
-#### DNS domain: atd.lab
+DNS domain: atd.lab
 
 #### DNS Domain Device Configuration
 
 ```eos
 dns domain atd.lab
 !
+```
+
+### IP Name Servers
+
+#### IP Name Servers Summary
+
+| Name Server | VRF | Priority |
+| ----------- | --- | -------- |
+| 192.168.2.1 | MGMT | - |
+| 8.8.8.8 | MGMT | - |
+
+#### IP Name Servers Device Configuration
+
+```eos
+ip name-server vrf MGMT 8.8.8.8
+ip name-server vrf MGMT 192.168.2.1
+```
+
+### Clock Settings
+
+#### Clock Timezone Settings
+
+Clock Timezone is set to **Europe/Paris**.
+
+#### Clock Device Configuration
+
+```eos
+!
+clock timezone Europe/Paris
 ```
 
 ### NTP
@@ -95,8 +137,7 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 
 ### Management SSH
 
-
-#### SSH timeout and management
+#### SSH Timeout and Management
 
 | Idle Timeout | SSH Management |
 | ------------ | -------------- |
@@ -108,7 +149,7 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 | ---------------- | ---------------------- |
 | - | - |
 
-#### Ciphers and algorithms
+#### Ciphers and Algorithms
 
 | Ciphers | Key-exchange methods | MAC algorithms | Hostkey server algorithms |
 |---------|----------------------|----------------|---------------------------|
@@ -120,7 +161,7 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 | --- | ------ |
 | default | Enabled |
 
-#### Management SSH Configuration
+#### Management SSH Device Configuration
 
 ```eos
 !
@@ -143,9 +184,9 @@ management ssh
 
 | VRF Name | IPv4 ACL | IPv6 ACL |
 | -------- | -------- | -------- |
-| default | - | - |
+| MGMT | - | - |
 
-#### Management API HTTP Configuration
+#### Management API HTTP Device Configuration
 
 ```eos
 !
@@ -153,7 +194,7 @@ management api http-commands
    protocol https
    no shutdown
    !
-   vrf default
+   vrf MGMT
       no shutdown
 ```
 
@@ -180,6 +221,10 @@ username arista privilege 15 role network-admin secret sha512 <removed>
 username tom privilege 15 role network-admin secret sha512 <removed>
 ```
 
+### Enable Password
+
+Enable password has been disabled
+
 ### AAA Authorization
 
 #### AAA Authorization Summary
@@ -197,7 +242,7 @@ aaa authorization exec default local
 !
 ```
 
-## Aliases
+## Aliases Device Configuration
 
 ```eos
 alias ale show ip hardware ale routes unprogrammed
@@ -221,6 +266,34 @@ alias summary6 show ipv6 bgp summary
 !
 ```
 
+## Spanning Tree
+
+### Spanning Tree Summary
+
+STP mode: **none**
+
+### Spanning Tree Device Configuration
+
+```eos
+!
+spanning-tree mode none
+```
+
+## Internal VLAN Allocation Policy
+
+### Internal VLAN Allocation Policy Summary
+
+| Policy Allocation | Range Beginning | Range Ending |
+| ------------------| --------------- | ------------ |
+| ascending | 1006 | 1199 |
+
+### Internal VLAN Allocation Policy Device Configuration
+
+```eos
+!
+vlan internal order ascending range 1006 1199
+```
+
 ## Interfaces
 
 ### Ethernet Interfaces
@@ -236,61 +309,85 @@ alias summary6 show ipv6 bgp summary
 
 ##### IPv4
 
-| Interface | Description | Type | Channel Group | IP Address | VRF |  MTU | Shutdown | ACL In | ACL Out |
-| --------- | ----------- | -----| ------------- | ---------- | ----| ---- | -------- | ------ | ------- |
-| Ethernet1 | S2-PE01_Ethernet1 | routed | - | 10.0.2.3/31 | default | 1500 | False | - | - |
-| Ethernet5 | S2-P01_Ethernet5 | routed | - | 10.0.0.7/31 | default | 1500 | False | - | - |
-| Ethernet6 | S1-P02_Ethernet6 | routed | - | 10.0.0.9/31 | default | 1500 | False | - | - |
-| Ethernet7 | S1-P01_Ethernet7 | routed | - | 10.0.0.5/31 | default | 1500 | False | - | - |
+| Interface | Description | Channel Group | IP Address | VRF |  MTU | Shutdown | ACL In | ACL Out |
+| --------- | ----------- | ------------- | ---------- | ----| ---- | -------- | ------ | ------- |
+| Ethernet1 | P2P_s2-pe01_Ethernet2 | - | 10.255.3.19/31 | default | 1500 | False | - | - |
+| Ethernet5 | P2P_s2-p01_Ethernet5 | - | 10.255.3.27/31 | default | 1500 | False | - | - |
+| Ethernet6 | P2P_s1-p02_Ethernet6 | - | 10.255.3.23/31 | default | 1500 | False | - | - |
+| Ethernet7 | P2P_s1-p01_Ethernet7 | - | 10.255.3.29/31 | default | 1500 | False | - | - |
 
 ##### ISIS
 
-| Interface | Channel Group | ISIS Instance | ISIS Metric | Mode | ISIS Circuit Type | Hello Padding | Authentication Mode |
-| --------- | ------------- | ------------- | ----------- | ---- | ----------------- | ------------- | ------------------- |
-| Ethernet1 | - | CORE-ISIS | - | point-to-point | - | - | - |
-| Ethernet5 | - | CORE-ISIS | - | point-to-point | - | - | - |
-| Ethernet6 | - | CORE-ISIS | - | point-to-point | - | - | - |
-| Ethernet7 | - | CORE-ISIS | - | point-to-point | - | - | - |
+| Interface | Channel Group | ISIS Instance | ISIS BFD | ISIS Metric | Mode | ISIS Circuit Type | Hello Padding | ISIS Authentication Mode |
+| --------- | ------------- | ------------- | -------- | ----------- | ---- | ----------------- | ------------- | ------------------------ |
+| Ethernet1 | - | CORE | - | 50 | point-to-point | level-2 | True | md5 |
+| Ethernet5 | - | CORE | - | 50 | point-to-point | level-2 | True | md5 |
+| Ethernet6 | - | CORE | - | 50 | point-to-point | level-2 | True | md5 |
+| Ethernet7 | - | CORE | - | 50 | point-to-point | level-2 | True | md5 |
 
 #### Ethernet Interfaces Device Configuration
 
 ```eos
 !
 interface Ethernet1
-   description S2-PE01_Ethernet1
+   description P2P_s2-pe01_Ethernet2
    no shutdown
    mtu 1500
    no switchport
-   ip address 10.0.2.3/31
-   isis enable CORE-ISIS
+   ip address 10.255.3.19/31
+   mpls ip
+   isis enable CORE
+   isis circuit-type level-2
+   isis metric 50
+   isis hello padding
    isis network point-to-point
+   isis authentication mode md5
+   isis authentication key 7 <removed>
 !
 interface Ethernet5
-   description S2-P01_Ethernet5
+   description P2P_s2-p01_Ethernet5
    no shutdown
    mtu 1500
    no switchport
-   ip address 10.0.0.7/31
-   isis enable CORE-ISIS
+   ip address 10.255.3.27/31
+   mpls ip
+   isis enable CORE
+   isis circuit-type level-2
+   isis metric 50
+   isis hello padding
    isis network point-to-point
+   isis authentication mode md5
+   isis authentication key 7 <removed>
 !
 interface Ethernet6
-   description S1-P02_Ethernet6
+   description P2P_s1-p02_Ethernet6
    no shutdown
    mtu 1500
    no switchport
-   ip address 10.0.0.9/31
-   isis enable CORE-ISIS
+   ip address 10.255.3.23/31
+   mpls ip
+   isis enable CORE
+   isis circuit-type level-2
+   isis metric 50
+   isis hello padding
    isis network point-to-point
+   isis authentication mode md5
+   isis authentication key 7 <removed>
 !
 interface Ethernet7
-   description S1-P01_Ethernet7
+   description P2P_s1-p01_Ethernet7
    no shutdown
    mtu 1500
    no switchport
-   ip address 10.0.0.5/31
-   isis enable CORE-ISIS
+   ip address 10.255.3.29/31
+   mpls ip
+   isis enable CORE
+   isis circuit-type level-2
+   isis metric 50
+   isis hello padding
    isis network point-to-point
+   isis authentication mode md5
+   isis authentication key 7 <removed>
 ```
 
 ### Loopback Interfaces
@@ -301,32 +398,31 @@ interface Ethernet7
 
 | Interface | Description | VRF | IP Address |
 | --------- | ----------- | --- | ---------- |
-| Loopback0 | Router ID | default | 1.0.0.122/32 |
+| Loopback0 | ROUTER_ID | default | 10.255.0.4/32 |
 
 ##### IPv6
 
 | Interface | Description | VRF | IPv6 Address |
 | --------- | ----------- | --- | ------------ |
-| Loopback0 | Router ID | default | - |
+| Loopback0 | ROUTER_ID | default | - |
 
 ##### ISIS
 
 | Interface | ISIS instance | ISIS metric | Interface mode |
 | --------- | ------------- | ----------- | -------------- |
-| Loopback0 | CORE-ISIS | - | passive |
+| Loopback0 | CORE | - | passive |
 
 #### Loopback Interfaces Device Configuration
 
 ```eos
 !
 interface Loopback0
-   description Router ID
+   description ROUTER_ID
    no shutdown
-   vrf default
-   ip address 1.0.0.122/32
-   isis enable CORE-ISIS
+   ip address 10.255.0.4/32
+   node-segment ipv4 index 4
+   isis enable CORE
    isis passive
-   node-segment ipv4 index 122
 ```
 
 ## Routing
@@ -347,12 +443,14 @@ service routing protocols model multi-agent
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | True |
+| MGMT | False |
 
 #### IP Routing Device Configuration
 
 ```eos
 !
 ip routing
+no ip routing vrf MGMT
 ```
 
 ### IPv6 Routing
@@ -362,14 +460,14 @@ ip routing
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | False |
-| default | false |
+| MGMT | false |
 
 ### Static Routes
 
 #### Static Routes Summary
 
-| VRF | Destination Prefix | Next Hop IP             | Exit interface      | Administrative Distance       | Tag               | Route Name                    | Metric         |
-| --- | ------------------ | ----------------------- | ------------------- | ----------------------------- | ----------------- | ----------------------------- | -------------- |
+| VRF | Destination Prefix | Next Hop IP | Exit interface | Administrative Distance | Tag | Route Name | Metric |
+| --- | ------------------ | ----------- | -------------- | ----------------------- | --- | ---------- | ------ |
 | default | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
 
 #### Static Routes Device Configuration
@@ -379,33 +477,16 @@ ip routing
 ip route 0.0.0.0/0 192.168.2.1
 ```
 
-### Router Traffic-Engineering
-
-#### Segment Routing Summary
-
-- SRTE is enabled.
-
-- system-colored-tunnel-rib is enabled
-
-#### Router Traffic Engineering Device Configuration
-
-```eos
-!
-router traffic-engineering
-   segment-routing
-      rib system-colored-tunnel-rib
-```
-
 ### Router ISIS
 
 #### Router ISIS Summary
 
 | Settings | Value |
 | -------- | ----- |
-| Instance | CORE-ISIS |
-| Net-ID | 49.0192.0168.0000.0122.00 |
+| Instance | CORE |
+| Net-ID | 49.0001.0102.5500.0004.00 |
 | Type | level-2 |
-| Router-ID | 1.0.0.122 |
+| Router-ID | 10.255.0.4 |
 | Log Adjacency Changes | True |
 | Advertise Passive-only | True |
 | SR MPLS Enabled | True |
@@ -414,76 +495,144 @@ router traffic-engineering
 
 | Interface | ISIS Instance | ISIS Metric | Interface Mode |
 | --------- | ------------- | ----------- | -------------- |
-| Ethernet1 | CORE-ISIS | - | point-to-point |
-| Ethernet5 | CORE-ISIS | - | point-to-point |
-| Ethernet6 | CORE-ISIS | - | point-to-point |
-| Ethernet7 | CORE-ISIS | - | point-to-point |
-| Loopback0 | CORE-ISIS | - | passive |
+| Ethernet1 | CORE | 50 | point-to-point |
+| Ethernet5 | CORE | 50 | point-to-point |
+| Ethernet6 | CORE | 50 | point-to-point |
+| Ethernet7 | CORE | 50 | point-to-point |
+| Loopback0 | CORE | - | passive |
 
 #### ISIS Segment-routing Node-SID
 
 | Loopback | IPv4 Index | IPv6 Index |
 | -------- | ---------- | ---------- |
-| Loopback0 | 122 | - |
-
-#### Prefix Segments
-
-| Prefix Segment | Index |
-| -------------- | ----- |
-| 10.0.0.0/31 | 50000 |
-| 10.0.0.2/31 | 50002 |
-| 10.0.0.4/31 | 50004 |
-| 10.0.0.6/31 | 50006 |
-| 10.0.0.8/31 | 50008 |
-| 10.0.1.0/31 | 50010 |
-| 10.0.1.2/31 | 50012 |
-| 10.0.1.4/31 | 50014 |
-| 10.0.1.6/31 | 50016 |
-| 10.0.1.8/31 | 50018 |
-| 10.0.1.10/31 | 50100 |
-| 10.0.1.12/31 | 50112 |
-| 10.0.1.14/31 | 50114 |
-| 10.0.2.0/31 | 50020 |
-| 10.0.2.2/31 | 50022 |
+| Loopback0 | 4 | - |
 
 #### ISIS IPv4 Address Family Summary
 
 | Settings | Value |
 | -------- | ----- |
 | IPv4 Address-family Enabled | True |
+| Maximum-paths | 4 |
 | TI-LFA Mode | link-protection |
 
 #### Router ISIS Device Configuration
 
 ```eos
 !
-router isis CORE-ISIS
-   net 49.0192.0168.0000.0122.00
+router isis CORE
+   net 49.0001.0102.5500.0004.00
+   router-id ipv4 10.255.0.4
    is-type level-2
-   router-id ipv4 1.0.0.122
    log-adjacency-changes
    advertise passive-only
    !
    address-family ipv4 unicast
+      maximum-paths 4
       fast-reroute ti-lfa mode link-protection
    !
    segment-routing mpls
       no shutdown
-      prefix-segment 10.0.0.0/31 index 50000
-      prefix-segment 10.0.0.2/31 index 50002
-      prefix-segment 10.0.0.4/31 index 50004
-      prefix-segment 10.0.0.6/31 index 50006
-      prefix-segment 10.0.0.8/31 index 50008
-      prefix-segment 10.0.1.0/31 index 50010
-      prefix-segment 10.0.1.2/31 index 50012
-      prefix-segment 10.0.1.4/31 index 50014
-      prefix-segment 10.0.1.6/31 index 50016
-      prefix-segment 10.0.1.8/31 index 50018
-      prefix-segment 10.0.1.10/31 index 50100
-      prefix-segment 10.0.1.12/31 index 50112
-      prefix-segment 10.0.1.14/31 index 50114
-      prefix-segment 10.0.2.0/31 index 50020
-      prefix-segment 10.0.2.2/31 index 50022
+```
+
+### Router BGP
+
+ASN Notation: asplain
+
+#### Router BGP Summary
+
+| BGP AS | Router ID |
+| ------ | --------- |
+| 65001 | 10.255.0.4 |
+
+| BGP AS | Cluster ID |
+| ------ | --------- |
+| 65001 | 10.255.0.4 |
+
+| BGP Tuning |
+| ---------- |
+| update wait-install |
+| no bgp default ipv4-unicast |
+| maximum-paths 4 ecmp 4 |
+
+#### Router BGP Peer Groups
+
+##### EVPN-OVERLAY-PEERS
+
+| Settings | Value |
+| -------- | ----- |
+| Address Family | evpn |
+| Remote AS | 65001 |
+| Source | Loopback0 |
+| BFD | True |
+| Send community | all |
+| Maximum routes | 0 (no limit) |
+
+##### RR-OVERLAY-PEERS
+
+| Settings | Value |
+| -------- | ----- |
+| Address Family | mpls |
+| Remote AS | 65001 |
+| Source | Loopback0 |
+| BFD | True |
+| Send community | all |
+| Maximum routes | 0 (no limit) |
+
+#### Router BGP EVPN Address Family
+
+##### EVPN Peer Groups
+
+| Peer Group | Activate | Route-map In | Route-map Out | Encapsulation |
+| ---------- | -------- | ------------ | ------------- | ------------- |
+| EVPN-OVERLAY-PEERS | True |  - | - | default |
+
+#### Router BGP Device Configuration
+
+```eos
+!
+router bgp 65001
+   router-id 10.255.0.4
+   update wait-install
+   no bgp default ipv4-unicast
+   bgp cluster-id 10.255.0.4
+   maximum-paths 4 ecmp 4
+   neighbor EVPN-OVERLAY-PEERS peer group
+   neighbor EVPN-OVERLAY-PEERS remote-as 65001
+   neighbor EVPN-OVERLAY-PEERS update-source Loopback0
+   neighbor EVPN-OVERLAY-PEERS bfd
+   neighbor EVPN-OVERLAY-PEERS send-community
+   neighbor EVPN-OVERLAY-PEERS maximum-routes 0
+   neighbor RR-OVERLAY-PEERS peer group
+   neighbor RR-OVERLAY-PEERS remote-as 65001
+   neighbor RR-OVERLAY-PEERS update-source Loopback0
+   neighbor RR-OVERLAY-PEERS bfd
+   neighbor RR-OVERLAY-PEERS send-community
+   neighbor RR-OVERLAY-PEERS maximum-routes 0
+   !
+   address-family evpn
+      neighbor EVPN-OVERLAY-PEERS activate
+   !
+   address-family ipv4
+      no neighbor EVPN-OVERLAY-PEERS activate
+      no neighbor RR-OVERLAY-PEERS activate
+```
+
+## BFD
+
+### Router BFD
+
+#### Router BFD Multihop Summary
+
+| Interval | Minimum RX | Multiplier |
+| -------- | ---------- | ---------- |
+| 300 | 300 | 3 |
+
+#### Router BFD Device Configuration
+
+```eos
+!
+router bfd
+   multihop interval 300 min-rx 300 multiplier 3
 ```
 
 ## MPLS
@@ -500,12 +649,21 @@ router isis CORE-ISIS
 | LDP Interface Disabled Default | - |
 | LDP Transport-Address Interface | - |
 
-#### MPLS and LDP Configuration
+#### MPLS and LDP Device Configuration
 
 ```eos
 !
 mpls ip
 ```
+
+### MPLS Interfaces
+
+| Interface | MPLS IP Enabled | LDP Enabled | IGP Sync |
+| --------- | --------------- | ----------- | -------- |
+| Ethernet1 | True | - | - |
+| Ethernet5 | True | - | - |
+| Ethernet6 | True | - | - |
+| Ethernet7 | True | - | - |
 
 ## VRF Instances
 
@@ -513,8 +671,11 @@ mpls ip
 
 | VRF Name | IP Routing |
 | -------- | ---------- |
+| MGMT | disabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
+!
+vrf instance MGMT
 ```
