feat: Underlay and control plane OK

--- a/config-builder/documentation/devices/s1-ce01.md
+++ b/config-builder/documentation/devices/s1-ce01.md
@@ -18,7 +18,6 @@
 - [Interfaces](#interfaces)
   - [Ethernet Interfaces](#ethernet-interfaces)
   - [Port-Channel Interfaces](#port-channel-interfaces)
-  - [VLAN Interfaces](#vlan-interfaces)
 - [Routing](#routing)
   - [Service Routing Protocols Model](#service-routing-protocols-model)
   - [IP Routing](#ip-routing)
@@ -250,6 +249,8 @@ vlan 2001
 
 | Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
 | --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
+| Ethernet1 | - | *trunk | *1018,2001 | *- | *- | 1 |
+| Ethernet2 | - | *trunk | *1018,2001 | *- | *- | 1 |
 
 *Inherited from Port-Channel Interface
 
@@ -272,6 +273,7 @@ interface Ethernet2
 
 | Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | LACP Fallback Timeout | LACP Fallback Mode | MLAG ID | EVPN ESI |
 | --------- | ----------- | ---- | ----- | ----------- | ------------| --------------------- | ------------------ | ------- | -------- |
+| Port-Channel1 | to s1-pe01 - firewall test - vrrp | trunk | 1018,2001 | - | - | - | - | - | - |
 
 #### Port-Channel Interfaces Device Configuration
 
@@ -279,50 +281,8 @@ interface Ethernet2
 !
 interface Port-Channel1
    description to s1-pe01 - firewall test - vrrp
-   switchport trunk allowed vlan 1810, 2001
+   switchport trunk allowed vlan 1018,2001
    switchport mode trunk
-```
-
-### VLAN Interfaces
-
-#### VLAN Interfaces Summary
-
-| Interface | Description | VRF |  MTU | Shutdown |
-| --------- | ----------- | --- | ---- | -------- |
-| Vlan1810 | vrf-FW-HA-xco-firewall-site01 | FW-HA | - | False |
-| Vlan2001 | vrf-bkp-xco-site01 | BKP | - | False |
-
-##### IPv4
-
-| Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
-| --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
-| Vlan1810 |  FW-HA  |  10.18.10.{{ device_id }}/24  |  -  |  -  |  -  |  -  |
-| Vlan2001 |  BKP  |  10.200.1.{{ device_id }}/24  |  -  |  -  |  -  |  -  |
-
-##### VRRP Details
-
-| Interface | VRRP-ID | Priority | Advertisement Interval | Preempt | Tracked Object Name(s) | Tracked Object Action(s) | IPv4 Virtual IP | IPv4 VRRP Version | IPv6 Virtual IP |
-| --------- | ------- | -------- | ---------------------- | --------| ---------------------- | ------------------------ | --------------- | ----------------- | --------------- |
-| Vlan1810 | 10 | 100 | - | Enabled | - | - | 10.18.10.254 | 3 | - |
-
-#### VLAN Interfaces Device Configuration
-
-```eos
-!
-interface Vlan1810
-   description vrf-FW-HA-xco-firewall-site01
-   no shutdown
-   vrf FW-HA
-   ip address 10.18.10.{{ device_id }}/24
-   vrrp 10 priority-level 100
-   vrrp 10 ipv4 10.18.10.254
-   vrrp 10 ipv4 version 3
-!
-interface Vlan2001
-   description vrf-bkp-xco-site01
-   no shutdown
-   vrf BKP
-   ip address 10.200.1.{{ device_id }}/24
 ```
 
 ## Routing
