--- a/config-builder/documentation/devices/s1-p01.md
+++ b/config-builder/documentation/devices/s1-p01.md
@@ -616,6 +616,7 @@ ASN Notation: asplain
 | -------- | ----- |
 | Address Family | evpn |
 | Remote AS | 65001 |
+| Route Reflector Client | Yes |
 | Source | Loopback0 |
 | BFD | True |
 | Send community | all |
@@ -631,6 +632,16 @@ ASN Notation: asplain
 | BFD | True |
 | Send community | all |
 | Maximum routes | 0 (no limit) |
+
+#### BGP Neighbors
+
+| Neighbor | Remote AS | VRF | Shutdown | Send-community | Maximum-routes | Allowas-in | BFD | RIB Pre-Policy Retain | Route-Reflector Client | Passive | TTL Max Hops |
+| -------- | --------- | --- | -------- | -------------- | -------------- | ---------- | --- | --------------------- | ---------------------- | ------- | ------------ |
+| 10.255.1.1 | Inherited from peer group EVPN-OVERLAY-PEERS | default | - | Inherited from peer group EVPN-OVERLAY-PEERS | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | - |
+| 10.255.1.2 | Inherited from peer group EVPN-OVERLAY-PEERS | default | - | Inherited from peer group EVPN-OVERLAY-PEERS | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | - |
+| 10.255.1.3 | Inherited from peer group EVPN-OVERLAY-PEERS | default | - | Inherited from peer group EVPN-OVERLAY-PEERS | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | - |
+| 10.255.1.4 | Inherited from peer group EVPN-OVERLAY-PEERS | default | - | Inherited from peer group EVPN-OVERLAY-PEERS | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | - |
+| 10.255.1.5 | Inherited from peer group EVPN-OVERLAY-PEERS | default | - | Inherited from peer group EVPN-OVERLAY-PEERS | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | - |
 
 #### Router BGP EVPN Address Family
 
@@ -654,6 +665,7 @@ router bgp 65001
    neighbor EVPN-OVERLAY-PEERS remote-as 65001
    neighbor EVPN-OVERLAY-PEERS update-source Loopback0
    neighbor EVPN-OVERLAY-PEERS bfd
+   neighbor EVPN-OVERLAY-PEERS route-reflector-client
    neighbor EVPN-OVERLAY-PEERS send-community
    neighbor EVPN-OVERLAY-PEERS maximum-routes 0
    neighbor RR-OVERLAY-PEERS peer group
@@ -662,6 +674,16 @@ router bgp 65001
    neighbor RR-OVERLAY-PEERS bfd
    neighbor RR-OVERLAY-PEERS send-community
    neighbor RR-OVERLAY-PEERS maximum-routes 0
+   neighbor 10.255.1.1 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.1.1 description s1-pe01_Loopback0
+   neighbor 10.255.1.2 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.1.2 description s1-pe02_Loopback0
+   neighbor 10.255.1.3 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.1.3 description s1-pe03_Loopback0
+   neighbor 10.255.1.4 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.1.4 description s1-pe04_Loopback0
+   neighbor 10.255.1.5 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.1.5 description s2-pe01_Loopback0
    !
    address-family evpn
       neighbor EVPN-OVERLAY-PEERS activate
