--- a/config-builder/documentation/devices/s2-ce01.md
+++ b/config-builder/documentation/devices/s2-ce01.md
@@ -12,6 +12,12 @@
   - [Local Users](#local-users)
   - [AAA Authorization](#aaa-authorization)
 - [Aliases Device Configuration](#aliases-device-configuration)
+- [VLANs](#vlans)
+  - [VLANs Summary](#vlans-summary)
+  - [VLANs Device Configuration](#vlans-device-configuration)
+- [Interfaces](#interfaces)
+  - [Ethernet Interfaces](#ethernet-interfaces)
+  - [Port-Channel Interfaces](#port-channel-interfaces)
 - [Routing](#routing)
   - [Service Routing Protocols Model](#service-routing-protocols-model)
   - [IP Routing](#ip-routing)
@@ -213,6 +219,72 @@ alias summary show bgp summary
 !
 ```
 
+## VLANs
+
+### VLANs Summary
+
+| VLAN ID | Name | Trunk Groups |
+| ------- | ---- | ------------ |
+| 1810 | S1-FW-XCO | - |
+| 2001 | BKP-SITE01 | - |
+
+### VLANs Device Configuration
+
+```eos
+!
+vlan 1810
+   name S1-FW-XCO
+!
+vlan 2001
+   name BKP-SITE01
+```
+
+## Interfaces
+
+### Ethernet Interfaces
+
+#### Ethernet Interfaces Summary
+
+##### L2
+
+| Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
+| --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
+| Ethernet1 | - | *trunk | *1018,2001 | *- | *- | 1 |
+| Ethernet2 | - | *trunk | *1018,2001 | *- | *- | 1 |
+
+*Inherited from Port-Channel Interface
+
+#### Ethernet Interfaces Device Configuration
+
+```eos
+!
+interface Ethernet1
+   channel-group 1 mode active
+!
+interface Ethernet2
+   channel-group 1 mode active
+```
+
+### Port-Channel Interfaces
+
+#### Port-Channel Interfaces Summary
+
+##### L2
+
+| Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | LACP Fallback Timeout | LACP Fallback Mode | MLAG ID | EVPN ESI |
+| --------- | ----------- | ---- | ----- | ----------- | ------------| --------------------- | ------------------ | ------- | -------- |
+| Port-Channel1 | to s1-pe01 - firewall test - vrrp | trunk | 1018,2001 | - | - | - | - | - | - |
+
+#### Port-Channel Interfaces Device Configuration
+
+```eos
+!
+interface Port-Channel1
+   description to s1-pe01 - firewall test - vrrp
+   switchport trunk allowed vlan 1018,2001
+   switchport mode trunk
+```
+
 ## Routing
 
 ### Service Routing Protocols Model
@@ -231,12 +303,16 @@ service routing protocols model multi-agent
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | True |
+| BKP | True |
+| FW-HA | True |
 
 #### IP Routing Device Configuration
 
 ```eos
 !
 ip routing
+ip routing vrf BKP
+ip routing vrf FW-HA
 ```
 
 ### IPv6 Routing
@@ -246,7 +322,8 @@ ip routing
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | False |
-| default | false |
+| BKP | false |
+| FW-HA | false |
 
 ### Static Routes
 
@@ -254,6 +331,8 @@ ip routing
 
 | VRF | Destination Prefix | Next Hop IP | Exit interface | Administrative Distance | Tag | Route Name | Metric |
 | --- | ------------------ | ----------- | -------------- | ----------------------- | --- | ---------- | ------ |
+| FW-HA | 0.0.0.0/0 | 10.18.10.1 | - | 1 | - | - | - |
+| BKP | 0.0.0.0/0 | 10.200.1.1 | - | 1 | - | - | - |
 | default | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
 
 #### Static Routes Device Configuration
@@ -261,6 +340,8 @@ ip routing
 ```eos
 !
 ip route 0.0.0.0/0 192.168.2.1
+ip route vrf BKP 0.0.0.0/0 10.200.1.1
+ip route vrf FW-HA 0.0.0.0/0 10.18.10.1
 ```
 
 ## VRF Instances
@@ -269,8 +350,16 @@ ip route 0.0.0.0/0 192.168.2.1
 
 | VRF Name | IP Routing |
 | -------- | ---------- |
+| BKP | enabled |
+| FW-HA | enabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
+!
+vrf instance BKP
+   description BACKUP VRF
+!
+vrf instance FW-HA
+   description FW-HA VRF
 ```
